--- a/index.html
+++ b/index.html
@@ -55,6 +55,79 @@
     </div>
  </section>
 
+
+ <!-- review section  -->
+<section class="review_section">
+  <h1 style="margin-bottom: 30px; text-align: center; font-weight: bold; font-size: 42px;">What our users say</h1>
+  <div style="display: flex; gap: 20px; ">
+  <div style="background-color: white; border-radius: 10px; padding: 24px;" >
+    <div style="margin-bottom: 18px;">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    </div>
+    <h2 style="margin-bottom: 8px;">Loved by Designers</h2>
+    <p style="margin-bottom: 24px;">This template instantly leveled up our presence.” – Studio Vertex</p>
+    <div class="avatar" style="display: flex; gap: 6px;">
+<div>
+ <img style="border-radius: 50%;" src="Assets/avatar.png" alt="">
+</div>
+<div>
+<p style="color: #757575;">Reviewer name</p>
+<p style="color: #B3B3B3;">Date</p>
+</div>
+    </div>
+
+  </div>
+  <div style="background-color: white; border-radius: 10px; padding: 24px;" >
+    <div style="margin-bottom: 18px;">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    </div>
+    <h2 style="margin-bottom: 8px;">Loved by Designers</h2>
+    <p style="margin-bottom: 24px;">This template instantly leveled up our presence.” – Studio Vertex</p>
+    <div class="avatar" style="display: flex; gap: 6px;">
+<div>
+ <img style="border-radius: 50%;" src="Assets/avatar.png" alt="">
+</div>
+<div>
+<p style="color: #757575;">Reviewer name</p>
+<p style="color: #B3B3B3;">Date</p>
+</div>
+    </div>
+
+  </div>
+  <div style="background-color: white; border-radius: 10px; padding: 24px;" >
+    <div style="margin-bottom: 18px;">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    </div>
+    <h2 style="margin-bottom: 8px;">Loved by Designers</h2>
+    <p style="margin-bottom: 24px;">This template instantly leveled up our presence.” – Studio Vertex</p>
+    <div class="avatar" style="display: flex; gap: 6px;">
+<div>
+ <img style="border-radius: 50%;" src="Assets/avatar.png" alt="">
+</div>
+<div>
+<p style="color: #757575;">Reviewer name</p>
+<p style="color: #B3B3B3;">Date</p>
+</div>
+    </div>
+
+  </div>
+  
+  
+  </div>
+</section>
+
 </body>
 
 </html>
