focus better section done

--- a/index.html
+++ b/index.html
@@ -128,6 +128,18 @@
   </div>
 </section>
 
+<section class="focus-section">
+ <h1 style="text-align: center; font-weight: 700; font-size: 50px; margin-bottom: 20px;">Ready to focus better</h1>
+ <p style="text-align: center; color: rgba(0, 0, 0, 0.5); margin-bottom: 20px;">This template instantly leveled up our presence.” – Studio Vertex</p>
+ <div style="text-align: center;">
+ <button style="margin-bottom: 20px;">Ger Started Free</button>
+ </div>
+ <div style="display: flex; justify-content: center; align-items: center;">
+ <img style="border-radius: 30px;" src="Assets/wc-big.png" alt="">
+ </div>
+</section>
+
+
 </body>
 
 </html>
