input section done

--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
   </div>
 </section>
 
+<!-- focus section  -->
+ 
 <section class="focus-section">
  <h1 style="text-align: center; font-weight: 700; font-size: 50px; margin-bottom: 20px;">Ready to focus better</h1>
  <p style="text-align: center; color: rgba(0, 0, 0, 0.5); margin-bottom: 20px;">This template instantly leveled up our presence.” – Studio Vertex</p>
@@ -139,6 +141,29 @@
  </div>
 </section>
 
+<!-- input section  -->
+
+<section class="input_section">
+  <div style="display: flex; justify-content: center; align-items: center;">
+    <h1>Let’s Get in Touch</h1>
+  </div>
+  <div>
+   <label style="display: block; margin-bottom: 10px;" for="">Email</label>
+  
+   <input placeholder="example@email.com" style="display: block; margin-bottom: 10px;" type="email" name="" id="">
+ 
+   <label style="display: block; margin-bottom: 10px;" for="">Name</label>
+
+   <input placeholder="full name" style="display: block; margin-bottom: 10px;" type="text" name="" id="">
+  
+   <label style="display: block; margin-bottom: 10px;" for="">Message</label>
+   
+   <textarea style="font-family: Arial, Helvetica, sans-serif;" placeholder="write your message...." name="" id="" cols="55" rows="7"></textarea>
+   <button>
+    Get in Touch
+   </button>
+  </div>
+</section>
 
 </body>
 
