footer section done

--- a/index.html
+++ b/index.html
@@ -165,6 +165,20 @@
   </div>
 </section>
 
+
+<footer class="footer">
+  <h1 style="color: #4E47FF; font-size: 100px; text-align: center;">LOGO</h1>
+  <p style="text-align: center; color: #8987A1;">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+ <div>
+  <ul style="display: flex; justify-content: space-around;">
+    <li><a href="">Home</a></li>
+    <li><a href="">About</a></li>
+    <li><a href="">How it Works</a></li>
+    <li><a href="">Services</a></li>
+  </ul>
+ </div>
+
+</footer>
 </body>
 
 </html>
